<resources>
    <string name="app_name">Infograce</string>
    <string name="nav1">Слои</string>
    <string name="nav2">Подложки</string>
    <string name="nav3">Миссии</string>
    <string name="nav_open">Открыть</string>
    <string name="nav_close">Закрыть</string>
    <string name="titleGroup">Общие слои</string>
    <string name="transparency">Прозрачность:</string>
    <string name="elements">Эл-ов:</string>
    <string name="commonDrag">commonDrag</string>
    <string name="deleteLayer">deleteLayer</string>
    <string name="search">search</string>
    <string name="addLayer">addLayer</string>
    <string name="imageReload">imageReload</string>
    <string name="iconLayer">iconLayer</string>
    <string name="chevron">chevron</string>
    <string name="invisible">invisible</string>
    <string name="drag">drag</string>
    <string name="zoom">zoom</string>
    <string name="center">center</string>
    <string name="table">table</string>
    <string name="rectangle">rectangle</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYXptZXRvdiIsImEiOiJjbDNmdjN0c3AwOHl1M2R0NW03d2MxYTA5In0.pc3Uq0typG33XTRCp1U-VQ</string>
    <string name="fab_descr_change_map_style">Изменить стиль карты</string>
</resources>