<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tabLayoutParent"
        >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="scrollable"
            app:tabContentStart="16dp"
            android:background="@color/dark_blue"
            app:tabTextColor="@color/white60"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorFullWidth="false"
            app:tabTextAppearance="@style/MyCustomTextAppearance">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:text="@string/nav1" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:text="@string/nav2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:text="@string/nav3" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableSearch"
            android:background="@color/dark_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconDrawable="@drawable/search2"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSearch"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/main_nav_host_fragment"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:defaultNavHost="true"-->

<!--        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabLayoutParent"-->
<!--        app:navGraph="@navigation/nav_graph" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutParent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">

            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/dark_blue_exp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageDrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/commonSwitch"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/button_background_color"
            app:tint="@color/button_text_color"
            app:srcCompat="@drawable/drag_list_item" />

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageSearch"
            app:layout_constraintStart_toEndOf="@+id/imageSearch"
            app:layout_constraintTop_toTopOf="@+id/imageSearch"
            android:background="@color/button_background_color"
            app:srcCompat="@drawable/delete" />

        <ImageView
            android:id="@+id/imageSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageAdd"
            app:layout_constraintStart_toEndOf="@+id/imageAdd"
            app:layout_constraintTop_toTopOf="@+id/imageAdd"
            android:background="@color/button_background_color"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/imageAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="12dp"
            android:background="@color/button_background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add" />

        <com.rm.rmswitch.RMTristateSwitch
            android:id="@+id/commonSwitch"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:forceAspectRatio="false"
            app:state="left"
            app:enabled="true"
            app:switchDesign="android"
            app:switchBkgLeftColor="@color/switch_track"
            app:switchBkgMiddleColor="@color/switch_track"
            app:switchBkgRightColor="@color/switch_track"

            app:switchToggleLeftColor="@color/white_thumb"
            app:switchToggleMiddleColor="@color/white60"
            app:switchToggleRightColor="@color/green" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>